src/test/ui/consts/const-eval/const_panic.stderr
error: any use of this value will cause an error
  --> $DIR/const_panic.rs:4:15
   |
LL | const Z: () = std::panic!("cheese");
   | --------------^^^^^^^^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'cheese', $DIR/const_panic.rs:4:15
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:7:16
   |
LL | const Z2: () = std::panic!();
   | ---------------^^^^^^^^^^^^^-
   |                |
   |                the evaluated program panicked at 'explicit panic', $DIR/const_panic.rs:7:16
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:10:15
   |
LL | const Y: () = std::unreachable!();
   | --------------^^^^^^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'internal error: entered unreachable code', $DIR/const_panic.rs:10:15
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:13:15
   |
LL | const X: () = std::unimplemented!();
   | --------------^^^^^^^^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'not implemented', $DIR/const_panic.rs:13:15
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:16:20
   |
LL | const Z_CORE: () = core::panic!("cheese");
   | -------------------^^^^^^^^^^^^^^^^^^^^^^-
   |                    |
   |                    the evaluated program panicked at 'cheese', $DIR/const_panic.rs:16:20
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:19:21
   |
LL | const Z2_CORE: () = core::panic!();
   | --------------------^^^^^^^^^^^^^^-
   |                     |
   |                     the evaluated program panicked at 'explicit panic', $DIR/const_panic.rs:19:21
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:22:20
   |
LL | const Y_CORE: () = core::unreachable!();
   | -------------------^^^^^^^^^^^^^^^^^^^^-
   |                    |
   |                    the evaluated program panicked at 'internal error: entered unreachable code', $DIR/const_panic.rs:22:20
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic.rs:25:20
   |
LL | const X_CORE: () = core::unimplemented!();
   | -------------------^^^^^^^^^^^^^^^^^^^^^^-
   |                    |
   |                    the evaluated program panicked at 'not implemented', $DIR/const_panic.rs:25:20
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

